--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     const serviceWorkerVersion = "1802909161";
   </script>
   <!-- This script adds the flutter initialization JS code -->
-  <script src="flutter.js" defer></script>
+  <script src="/main.dart.js" defer></script>
 </head>
 <body>
   <script>
